tests/ui/endpoint/non_custom_body_attribute.stderr
error: `body` can only be used on custom endpoints
 --> tests/ui/endpoint/non_custom_body_attribute.rs:8:12
  |
8 | #[read_all(body = false)]
  |            ^^^^
